2/2.2/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: dhanusaputra/backend
