2/2.2/manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: dhanusaputra/frontend
