2/2.2/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - targetPort: 8080
      protocol: TCP
      port: 2345
